--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <li><a href="https://wexopay.com/blog/Metaverse-what-awaits-us-in-the-future" target=”_blank”>https://wexopay.com/blog/Metaverse-what-awaits-us-in-the-future</a></li>
         <li><a href="https://www.plugxr.com/augmented-reality/top-metaverse-use-cases/" target=”_blank”>https://www.plugxr.com/augmented-reality/top-metaverse-use-cases/</a></li>
         <li><a href="https://distinguished.io/blog/what-equipment-are-needed-in-metaverse-5-top-metaverse-hardware" target=”_blank”>https://distinguished.io/blog/what-equipment-are-needed-in-metaverse-5-top-metaverse-hardware</a></li>
-       
+        <li><a href="https://appinventiv.com/blog/metaverse-use-cases-and-benefits/" target=”_blank”>https://appinventiv.com/blog/metaverse-use-cases-and-benefits/</a></li>
     </ul>
     <br>
     <br>
@@ -70,7 +70,8 @@
         <li><a href="https://www.plugxr.com/augmented-reality/top-metaverse-use-cases/" target=”_blank”>https://www.plugxr.com/augmented-reality/top-metaverse-use-cases/</a></li>
         <li><a href="https://tasselo.com.br/metaverso-e-arquitetura-qual-o-impacto-dessa-tendencia" target=”_blank”>https://tasselo.com.br/metaverso-e-arquitetura-qual-o-impacto-dessa-tendencia</a></li>
         <li><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTc9sULsFI4mBsvuE29EDlWgfkbVFh8rtb3Yh0TWq8&s" target=”_blank”>https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTc9sULsFI4mBsvuE29EDlWgfkbVFh8rtb3Yh0TWq8&s</a></li>
-       
+        <li><a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.polygon.com%2F23313564%2Fmark-zuckerberg-metaverse-horizon-worlds-graphics-update&psig=AOvVaw3uoUhQXh5fn6bfGpg_LXfB&ust=1670871097832000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCOi_2YSe8vsCFQAAAAAdAAAAABAD" target=”_blank”>https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.polygon.com%2F23313564%2Fmark-zuckerberg-metaverse-horizon-worlds-graphics-update&psig=AOvVaw3uoUhQXh5fn6bfGpg_LXfB&ust=1670871097832000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCOi_2YSe8vsCFQAAAAAdAAAAABAD</a></li>
+        <li><a href="https://static.vecteezy.com/system/resources/previews/005/107/132/non_2x/illustration-line-drawings-a-young-man-uses-virtual-reality-glasses-when-playing-games-pretending-to-touch-button-while-wearing-virtual-reality-helmet-wearing-vr-glasses-isolated-on-white-background-free-vector.jpg" target=”_blank”>https://static.vecteezy.com/system/resources/previews/005/107/132/non_2x/illustration-line-drawings-a-young-man-uses-virtual-reality-glasses-when-playing-games-pretending-to-touch-button-while-wearing-virtual-reality-helmet-wearing-vr-glasses-isolated-on-white-background-free-vector.jpg</a></li>
     </ul>
 
 </body>
